--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -6,7 +6,6 @@ copyright: Copyright © Hlop3z
 nav:
   - Introduction: index.md
   - Settings: settings.md
-  - CRUD: crud.md
   - Applications:
       - Introduction: applications/index.md
       - Application: applications/application.md
@@ -15,6 +14,9 @@ nav:
       - Forms: applications/forms.md
       - Manager: applications/manager.md
       - Commands: applications/commands.md
+  - Simplified:
+      - CRUD: crud.md
+      - Client: client.md
   - SQL Database:
       - Migrations: databases/index.md
 
