--- a/tests/server/config/spoc.toml
+++ b/tests/server/config/spoc.toml
@@ -1,9 +1,16 @@
+# Application Configuration
 [spoc]
 mode = "development"  # options: production, development, staging
 debug = true
 authentication = true
 
-# ZMQ
+# GraphQL Configuration
+[spoc.graphql]
+max_depth = 4
+introspection = true
+items_per_page = 100
+
+# ZeroMQ Configuration
 [spoc.zmq]
 workers = 2
 proxy = true
@@ -13,17 +20,18 @@ device = "forwarder"            # queue, forwarder, streamer
 server = "tcp://127.0.0.1:5556"
 client = "tcp://127.0.0.1:5555"
 
-# Mode 
+# Installed Apps by Mode
 [spoc.apps]
 production = []
 development = []
 staging = []
 
-# Extras
+# Additional Components
 [spoc.extras]
+# Plugins
 # permissions = ["demo.permissions.MyPermission"]
 # extensions = ["demo.extensions.MyExtension"]
 
-# Events
+# Event Hooks
 on_startup = ["demo.events.on_startup"]
 on_shutdown = ["demo.events.on_shutdown"]
