--- a/.pylintrc
+++ b/.pylintrc
@@ -439,6 +439,7 @@ disable=raw-checker-failed,
         import-outside-toplevel,
         relative-beyond-top-level,
         too-many-locals,
+        anomalous-backslash-in-string,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
