--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zmag"
-version = "0.0.13"
+dynamic = ["version"]
 description = "Craft APIs with ZeroMQ and GraphQL"
 authors = [
     { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
@@ -18,6 +18,9 @@ server = ["spoc>=0.1.35", "strawberry-graphql>=0.237.3", "click>=8.1.7"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.version]
+path = "src/zmag/__init__.py"
+
 [tool.uv]
 dev-dependencies = [
     "pyright>=1.1.377",
@@ -31,6 +34,9 @@ dev-dependencies = [
     "ssort>=0.13.0",
     "mkdocs>=1.6.0",
     "mkdocs-material>=9.5.32",
+    "mkdocs-macros-plugin>=1.0.5",
+    "mkdocstrings[python]>=0.25.2",
+    "termynal>=0.12.1",
 ]
 
 [tool.uv.sources]
