--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -129,7 +129,7 @@ plugins:
             # Generic
             allow_inspection: true
             group_by_category: true
-            show_bases: false
+            show_bases: true
             show_labels: true
             show_source: false
             unwrap_annotated: true
