--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,27 @@
-name: Upload Python Package
+name: Upload Release to PyPI
 
-on: workflow_dispatch
+on:
+  workflow_dispatch: # Manually triggered
+  push:
+    tags:
+      - v* # Automatically triggered on tags that match the pattern
 
 permissions:
   contents: read
 
 jobs:
-  deploy:
+  pypi-publish:
+    name: Publish to PyPI
     runs-on: ubuntu-latest
-
+    permissions:
+      # This permission is needed for private repositories.
+      contents: read
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pdm
-      - name: Install dependencies with PDM
-        run: |
-          python -m pdm install
-      - name: Build package
-        run: python -m pdm build
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+
+      - uses: pdm-project/setup-pdm@v3
+
+      - name: Publish package distributions to PyPI
+        run: pdm publish
