--- a/.gitignore
+++ b/.gitignore
@@ -158,8 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Linters
+.ruff_cache
+
+# PDM
 .pdm-python
-pdm.lock
 .pdm-build/
+pdm.lock
+
 docs/site/
 /ignored
