--- a/.pylintrc
+++ b/.pylintrc
@@ -440,6 +440,7 @@ disable=raw-checker-failed,
         relative-beyond-top-level,
         too-many-locals,
         anomalous-backslash-in-string,
+        too-many-positional-arguments,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
